# video_summarizer

./: .gitignore  LICENSE  README.md  instructions.md  main.py  pyproject.toml
src/cli/: interactive.py  main.py
src/core/: audio.py  downloader.py  llm.py  summarizer.py  transcriber.py  translator.py
tests/: smoke_test.py
