[project]
name = "video-summarizer"
version = "0.1.0"
description = "Tools for transcribing, summarizing, and translating videos."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "yt-dlp>=2024.11.4",
    "ffmpeg-python>=0.2.0",
    "openai-whisper>=20240930",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "ollama>=0.4.2",
    "inquirerpy>=0.3.4",
]

[project.scripts]
video-summarizer = "src.cli.main:app"
